--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "pkief.material-icon-theme",
     "bungcip.better-toml",
-    "aaron-bond.better-comments"
+    "aaron-bond.better-comments",
+    "vknabel.vscode-swift-development-environment"
   ]
 }
