--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,6 @@
   "terminal.integrated.fontSize": 16,
   "editor.fontSize": 16,
   "terminal.integrated.defaultProfile.linux": "bash",
+  "swift.path.swift_driver_bin": "/home/gitpod/swift-wasm-5.6.0-RELEASE/usr/bin/swift",
+
 }
